--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>
+        <p><center>
             I’m a 2nd-year Data Science student from Atharva College of Hotel Management, Catering & Technology. Passionate about solving real-world problems 
             using data analysis, machine learning, and visualization. Currently exploring
             predictive modeling, Python automation, and AI-driven applications.
-        </p>
+        </p></center>
     </section>
 
     <!-- Skills Section -->
@@ -158,3 +158,4 @@
 <script src="app.js"></script>
 </body>
 </html>
+
