--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <p><center>
             I’m a 2nd-year Data Science student from Atharva College of Hotel Management, Catering & Technology. Passionate about solving real-world problems 
             using data analysis, machine learning, and visualization. Currently exploring
-            predictive modeling, Python automation, and AI-driven applications.
-        </p></center>
+            predictive modeling, Python automation, and AI-driven applications.</center>
+        </p>
     </section>
 
     <!-- Skills Section -->
@@ -158,4 +158,5 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
