--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <div class="skill-card">Python</div>
             <div class="skill-card">Machine Learning</div>
             <div class="skill-card">SQL</div>
-            <div class="skill-card">Numpy / Pandas</div>
+            <div class="skill-card">Numpy/Pandas</div>
             <div class="skill-card">Data Visualization</div>
-            <div class="skill-card">Tableau</div>
-            <div class="skill-card">Statistics</div>
-            <div class="skill-card">Power BI</div>
+            <div class="skill-card">CSS</div>
+            <div class="skill-card">DSA</div>
+            <div class="skill-card">HTML</div>
         </div>
     </section>
 
@@ -158,5 +158,6 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
