--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <p><center>
-            I’m a 2nd-year Data Science student from Atharva College of Hotel Management, Catering & Technology. Passionate about solving real-world problems 
-            using data analysis, machine learning, and visualization. Currently exploring
-            predictive modeling, Python automation, and AI-driven applications.</center>
-        </p>
+            Hi, I’m Kavya Arekar, a passionate and dedicated BSc Data Science second-year student with a strong interest in understanding how data can solve real-world problems. I enjoy exploring the intersection of technology, analytics, and decision-making, and I am constantly working to expand my skills in programming, statistics, and machine learning.
+
+Over the past two years, I have developed a growing foundation in Python, SQL, data visualization, data preprocessing, and exploratory data analysis. I enjoy transforming raw data into meaningful insights and creating clean, intuitive visualizations that help people understand the story behind the numbers. I am also building hands-on experience with tools and technologies such as Pandas, NumPy, Matplotlib, Scikit-learn, and basic machine learning algorithms.
+
+I am particularly interested in fields like predictive analytics, AI, and business intelligence, and I’m excited about the possibilities of using data to improve decision-making across industries. Beyond academics, I enjoy working on small projects, learning new concepts, and continuously improving my technical and analytical skills.
+As I progress in my data science journey, my goal is to apply my knowledge to real-world projects and internships where I can contribute meaningfully while learning from experienced professionals. I am eager to grow, collaborate, and take on new challenges that help me evolve into a skilled and confident data science professional.
+
+If you want to connect or explore my work, feel free to check out my projects and portfolio!
+    </center>
+    </p>
     </section>
 
     <!-- Skills Section -->
@@ -158,6 +164,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
