--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Hello, I'm <span>Kavya Arekar</span></h1>
             <br>
             <h3>2nd Year Data Science Student</h3>
-            <p> From Atharva College of Hotel Management Catering & Technology,Mumbai</p>
+            <p> From Atharva College of Hotel Management Catering & Technology - Mumbai, Maharashtra</p>
             <br>
             <br>
             <a class="btn" href="#projects">Explore My Work</a>
@@ -161,6 +161,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
