--- a/index.html
+++ b/index.html
@@ -51,19 +51,62 @@ If you want to connect or explore my work, feel free to check out my projects an
         </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="skills">
-        <h2>Skills</h2>
-        <div class="skill-grid">
-            <div class="skill-card">Python</div>
-            <div class="skill-card">Machine Learning</div>
-            <div class="skill-card">SQL</div>
-            <div class="skill-card">Numpy/Pandas</div>
-            <div class="skill-card">Data Visualization</div>
-            <div class="skill-card">CSS</div>
-            <div class="skill-card">DSA</div>
-            <div class="skill-card">HTML</div>
-        </div>
-    </section>
+<div class="skill-box">
+    <p>Python</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 90%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>Machine Learning</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 75%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>SQL</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 70%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>Numpy / Pandas</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 80%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>Data Visualization</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 85%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>HTML</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 95%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>CSS</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 90%;"></div>
+    </div>
+</div>
+
+<div class="skill-box">
+    <p>DSA</p>
+    <div class="skill-bar">
+        <div class="skill-level" style="--skill-width: 60%;"></div>
+    </div>
+</div>
+
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
@@ -161,6 +204,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
