--- a/index.html
+++ b/index.html
@@ -51,61 +51,67 @@ If you want to connect or explore my work, feel free to check out my projects an
         </section>
 
     <!-- Skills Section -->
-<div class="skill-box">
-    <p>Python</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 90%;"></div>
-    </div>
-</div>
+<!-- Skills Section -->
+<section id="skills" class="skills">
+    <h2>Skills</h2>
 
-<div class="skill-box">
-    <p>Machine Learning</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 75%;"></div>
+    <div class="skill-box">
+        <p>Python</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 90%;"></div>
+        </div>
     </div>
-</div>
 
-<div class="skill-box">
-    <p>SQL</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 70%;"></div>
+    <div class="skill-box">
+        <p>Machine Learning</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 75%;"></div>
+        </div>
     </div>
-</div>
 
-<div class="skill-box">
-    <p>Numpy / Pandas</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 80%;"></div>
+    <div class="skill-box">
+        <p>SQL</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 70%;"></div>
+        </div>
     </div>
-</div>
 
-<div class="skill-box">
-    <p>Data Visualization</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 85%;"></div>
+    <div class="skill-box">
+        <p>Numpy / Pandas</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 80%;"></div>
+        </div>
     </div>
-</div>
 
-<div class="skill-box">
-    <p>HTML</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 95%;"></div>
+    <div class="skill-box">
+        <p>Data Visualization</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 85%;"></div>
+        </div>
     </div>
-</div>
 
-<div class="skill-box">
-    <p>CSS</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 90%;"></div>
+    <div class="skill-box">
+        <p>HTML</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 95%;"></div>
+        </div>
     </div>
-</div>
 
-<div class="skill-box">
-    <p>DSA</p>
-    <div class="skill-bar">
-        <div class="skill-level" style="--skill-width: 60%;"></div>
+    <div class="skill-box">
+        <p>CSS</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 90%;"></div>
+        </div>
     </div>
-</div>
+
+    <div class="skill-box">
+        <p>DSA</p>
+        <div class="skill-bar">
+            <div class="skill-level" style="--skill-width: 60%;"></div>
+        </div>
+    </div>
+
+</section>
 
 
     <!-- Projects Section -->
@@ -204,6 +210,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
