--- a/index.html
+++ b/index.html
@@ -52,66 +52,55 @@ If you want to connect or explore my work, feel free to check out my projects an
 
     <!-- Skills Section -->
 <!-- Skills Section -->
+<!-- Skills Section -->
 <section id="skills" class="skills">
     <h2>Skills</h2>
 
-    <div class="skill-box">
-        <p>Python</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 90%;"></div>
-        </div>
-    </div>
+    <div class="skills-container">
 
-    <div class="skill-box">
-        <p>Machine Learning</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 75%;"></div>
+        <div class="skill-item">
+            <p>Python</p>
+            <div class="stars">★★★★★</div>
         </div>
-    </div>
 
-    <div class="skill-box">
-        <p>SQL</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 70%;"></div>
+        <div class="skill-item">
+            <p>Machine Learning</p>
+            <div class="stars">★★★★☆</div>
         </div>
-    </div>
 
-    <div class="skill-box">
-        <p>Numpy / Pandas</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 80%;"></div>
+        <div class="skill-item">
+            <p>SQL</p>
+            <div class="stars">★★★★☆</div>
         </div>
-    </div>
 
-    <div class="skill-box">
-        <p>Data Visualization</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 85%;"></div>
+        <div class="skill-item">
+            <p>Numpy / Pandas</p>
+            <div class="stars">★★★★☆</div>
         </div>
-    </div>
 
-    <div class="skill-box">
-        <p>HTML</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 95%;"></div>
+        <div class="skill-item">
+            <p>Data Visualization</p>
+            <div class="stars">★★★★★</div>
         </div>
-    </div>
 
-    <div class="skill-box">
-        <p>CSS</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 90%;"></div>
+        <div class="skill-item">
+            <p>HTML</p>
+            <div class="stars">★★★★★</div>
         </div>
-    </div>
 
-    <div class="skill-box">
-        <p>DSA</p>
-        <div class="skill-bar">
-            <div class="skill-level" style="--skill-width: 60%;"></div>
+        <div class="skill-item">
+            <p>CSS</p>
+            <div class="stars">★★★★★</div>
         </div>
-    </div>
 
+        <div class="skill-item">
+            <p>DSA</p>
+            <div class="stars">★★★☆☆</div>
+        </div>
+
+    </div>
 </section>
+
 
 
     <!-- Projects Section -->
@@ -210,6 +199,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
