--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@ If you want to connect or explore my work, feel free to check out my projects an
         </section>
 
     <!-- Skills Section -->
-<!-- Skills Section -->
-<!-- Skills Section -->
+    <!-- Skills Section -->
 <section id="skills" class="skills">
     <h2>Skills</h2>
 
@@ -60,46 +59,48 @@ If you want to connect or explore my work, feel free to check out my projects an
 
         <div class="skill-item">
             <p>Python</p>
-            <div class="stars">★★★★★</div>
+            <div class="stars" data-stars="5">★★★★★</div>
         </div>
 
         <div class="skill-item">
             <p>Machine Learning</p>
-            <div class="stars">★★★★☆</div>
+            <div class="stars" data-stars="4">★★★★☆</div>
         </div>
 
         <div class="skill-item">
             <p>SQL</p>
-            <div class="stars">★★★★☆</div>
+            <div class="stars" data-stars="4">★★★★☆</div>
         </div>
 
         <div class="skill-item">
             <p>Numpy / Pandas</p>
-            <div class="stars">★★★★☆</div>
+            <div class="stars" data-stars="4">★★★★☆</div>
         </div>
 
         <div class="skill-item">
             <p>Data Visualization</p>
-            <div class="stars">★★★★★</div>
+            <div class="stars" data-stars="5">★★★★★</div>
         </div>
 
         <div class="skill-item">
             <p>HTML</p>
-            <div class="stars">★★★★★</div>
+            <div class="stars" data-stars="5">★★★★★</div>
         </div>
 
         <div class="skill-item">
             <p>CSS</p>
-            <div class="stars">★★★★★</div>
+            <div class="stars" data-stars="5">★★★★★</div>
         </div>
 
         <div class="skill-item">
             <p>DSA</p>
-            <div class="stars">★★★☆☆</div>
+            <div class="stars" data-stars="3">★★★☆☆</div>
         </div>
 
     </div>
 </section>
+
+
 
 
 
@@ -199,6 +200,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
