--- a/index.html
+++ b/index.html
@@ -26,16 +26,25 @@
 
     <!-- Home Section -->
     <section id="home" class="home">
+    <div class="home-container">
+
         <div class="home-text">
             <h1>Hello, I'm <span>Kavya Arekar</span></h1>
             <br>
             <h3>2nd Year Data Science Student</h3>
-            <p> From Atharva College of Hotel Management Catering & Technology - Mumbai, Maharashtra</p>
-            <br>
-            <br>
+            <p>From Atharva College of Hotel Management Catering & Technology - Mumbai, Maharashtra</p>
+            <br><br>
             <a class="btn" href="#projects">Explore My Work</a>
         </div>
-    </section>
+
+        <!-- Square Profile Photo -->
+        <div class="home-photo">
+            <img src="your-photo.jpg" alt="Kavya Photo">
+        </div>
+
+    </div>
+</section>
+
 
     <!-- About Section -->
     <section id="about" class="about">
@@ -200,6 +209,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
