--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!-- Square Profile Photo -->
         <div class="home-photo">
-            <img src="your-photo.jpg" alt="Kavya Photo">
+            <img src="profphoto.jpg" alt="Kavya Arekar">
         </div>
 
     </div>
@@ -209,6 +209,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
