--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <!-- Square Profile Photo -->
-        <div class="home-photo">
+        <div class="photo-box">
             <img src="profphoto.jpg" alt="Kavya Arekar">
         </div>
 
@@ -209,6 +209,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
