--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
     <div class="home-container">
 
         <div class="home-text">
+            <center>
             <h1>Hello, I'm <span>Kavya Arekar</span></h1>
             <br>
             <h3>2nd Year Data Science Student</h3>
             <p>From Atharva College of Hotel Management Catering & Technology - Mumbai, Maharashtra</p>
             <br><br>
             <a class="btn" href="#projects">Explore My Work</a>
+             </center>
         </div>
 
         <!-- Square Profile Photo -->
@@ -209,6 +211,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
