--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p><center> Hi, I’m Kavya Arekar, a passionate and dedicated BSc Data Science second-year student with a strong interest in understanding how data can solve real-world problems. I enjoy exploring the intersection of technology, analytics, and decision-making, and I am constantly working to expand my skills in programming, statistics, and machine learning.
-Over the past two years, I have developed a growing foundation in Python, SQL, data visualization, data preprocessing, and exploratory data analysis. I enjoy transforming raw data into meaningful insights and creating clean, intuitive visualizations that help people understand the story behind the numbers. I am also building hands-on experience with tools and technologies such as Pandas, NumPy, Matplotlib, Scikit-learn, and basic machine learning algorithms.
-I am particularly interested in fields like predictive analytics, AI, and business intelligence, and I’m excited about the possibilities of using data to improve decision-making across industries. Beyond academics, I enjoy working on small projects, learning new concepts, and continuously improving my technical and analytical skills.
-As I progress in my data science journey, my goal is to apply my knowledge to real-world projects and internships where I can contribute meaningfully while learning from experienced professionals. I am eager to grow, collaborate, and take on new challenges that help me evolve into a skilled and confident data science professional.
+        <center><p> Hi, I’m Kavya Arekar, a passionate and dedicated BSc Data Science second-year student with a strong interest in understanding how data can solve real-world problems.</p><p> I enjoy exploring the intersection of technology, analytics, and decision-making, and I am constantly working to expand my skills in programming, statistics, and machine learning.</p>
+<p>Over the past two years, I have developed a growing foundation in Python, SQL, data visualization, data preprocessing, and exploratory data analysis. I enjoy transforming raw data into meaningful insights and creating clean, intuitive visualizations that help people understand the story behind the numbers.</p><p> I am also building hands-on experience with tools and technologies such as Pandas, NumPy, Matplotlib, Scikit-learn, and basic machine learning algorithms.</p>
+<p>I am particularly interested in fields like predictive analytics, AI, and business intelligence, and I’m excited about the possibilities of using data to improve decision-making across industries. Beyond academics, I enjoy working on small projects, learning new concepts, and continuously improving my technical and analytical skills.</p>
+<p>As I progress in my data science journey, my goal is to apply my knowledge to real-world projects and internships where I can contribute meaningfully while learning from experienced professionals. I am eager to grow, collaborate, and take on new challenges that help me evolve into a skilled and confident data science professional.</p>
 <br>
 If you want to connect or explore my work, feel free to check out my projects and portfolio!
         </center>
@@ -219,6 +219,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
