--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <a href="https://www.linkedin.com/in/YOUR-LINKEDIN-USERNAME" target="_blank" class="linkedin-btn"> Visit my LinkedIn</a>
             <button id="resume-btn" class="resume-btn">Download Resume</button>
         </nav>
     </header>
@@ -219,6 +220,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
