--- a/index.html
+++ b/index.html
@@ -203,15 +203,34 @@ If you want to connect or explore my work, feel free to check out my projects an
 </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <h2>Contact Me</h2>
-        <form action="#">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Message" rows="5" required></textarea>
-            <button type="submit" class="btn">Send</button>
-        </form>
-    </section>
+   <section id="contact" class="contact">
+    <h2>Contact</h2>
+
+    <div class="contact-card">
+        
+        <div class="contact-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/456/456212.png" alt="User Icon">
+            <p>Kavya Arekar</p>
+        </div>
+
+        <div class="contact-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email">
+            <p><a href="arekarkavya@gmail.com">arekarkavya@gmail.com</a></p>
+        </div>
+
+        <div class="contact-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+            <p><a href="https://www.linkedin.com/in/kavya-arekar-82aa6529b/" target="_blank">LinkedIn Profile</a></p>
+        </div>
+
+        <div class="contact-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub Icon">
+            <p><a href="https://github.com/05-Kavya" target="_blank">GitHub Profile</a></p>
+        </div>
+
+    </div>
+</section>
+
 
     <footer>
         <p>© 2025 Kavya Arekar | Data Science Portfolio</p>
@@ -220,6 +239,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
