--- a/index.html
+++ b/index.html
@@ -152,50 +152,60 @@ If you want to connect or explore my work, feel free to check out my projects an
         <div class="cert-card">
             <img src="Solution_Architecture.jpg" alt=" Forage Certificate">
             <h3>AWS- Solution Architecture Job Simulation</h3>
+            <a href="https://www.theforage.com/completion-certificates/pmnMSL4QiQ9JCgE3W/kkE9HyeNcw6rwCRGw_pmnMSL4QiQ9JCgE3W_HsCRvTnuiQAB29i23_1755579345117_completion_certificate.pdf" target="_blank" class="cred-btn">Show Credential</a>
         </div>
 
         <div class="cert-card">
             <img src="GoogleDA.jpg" alt="Coursera Certificate">
+            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Google Data Analytics Professional Certificate</h3>
         </div>
 
         <div class="cert-card">
             <img src="R.jpg" alt=" Coursera Certificate">
+            <a href="" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Data Analysis with R Programming</h3>
         </div>
 
         <div class="cert-card">
             <img src="EA.jpg" alt="Forage Certificate ">
+            <a href="https://www.theforage.com/completion-certificates/j43dGscQHtJJ57N54/a77WE3de8qrxWferQ_j43dGscQHtJJ57N54_HsCRvTnuiQAB29i23_1755960614649_completion_certificate.pdf" target="_blank" class="cred-btn">Show Credential</a>
             <h3>EA-Software Engineering Job Simulation</h3>
         </div>
 
         <div class="cert-card">
             <img src="JP.jpg" alt="Forage Certificate ">
+            <a href="https://www.theforage.com/completion-certificates/Sj7temL583QAYpHXD/bWqaecPDbYAwSDqJy_Sj7temL583QAYpHXD_HsCRvTnuiQAB29i23_1755581265110_completion_certificate.pdf" target="_blank" class="cred-btn">Show Credential</a>
             <h3>J.P Morgan - Quantitative Research Job Simulation</h3>
         </div>
 
         <div class="cert-card">
             <img src="Delloite.jpg" alt="Forage Certificate ">
+            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Delloite-Technology Job Simulation</h3>
         </div>
 
         <div class="cert-card">
             <img src="GA.jpg" alt="Coursera Certificate ">
+            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Getting Started in Google Analytics</h3>
         </div>
 
         <div class="cert-card">
             <img src="MS.jpg" alt="Coursera Certificate ">
+            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Introduction to Data Analysis using Microsoft Excel</h3>
         </div>
 
         <div class="cert-card">
             <img src="python.jpg" alt="Great Learning Certificate ">
+            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Python For Machine Learning</h3>
         </div>
 
         <div class="cert-card">
             <img src="PowerBI.jpg" alt="Great Learning Certificate ">
+            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Data Visualization with PowerBI</h3>
         </div>
 
@@ -239,6 +249,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
