--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@ If you want to connect or explore my work, feel free to check out my projects an
 
         <div class="contact-item">
             <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
-            <p><a href="https://www.linkedin.com/in/kavya-arekar-82aa6529b/" target="_blank">LinkedIn Profile</a></p>
+            <p><a href="https://www.linkedin.com/in/kavya-arekar-82aa6529b/" target="_blank">Kavya Arekar</a></p>
         </div>
 
         <div class="contact-item">
             <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub Icon">
-            <p><a href="https://github.com/05-Kavya" target="_blank">GitHub Profile</a></p>
+            <p><a href="https://github.com/05-Kavya" target="_blank">05-Kavya</a></p>
         </div>
 
     </div>
@@ -249,6 +249,7 @@ If you want to connect or explore my work, feel free to check out my projects an
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
