--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div class="cert-card">
             <img src="GoogleDA.jpg" alt="Coursera Certificate">
-            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/89VC6OAMT1US" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Google Data Analytics Professional Certificate</h3>
         </div>
 
@@ -258,6 +258,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
