--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <div class="cert-card">
             <img src="R.jpg" alt=" Coursera Certificate">
-            <a href="" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.coursera.org/account/accomplishments/verify/DMHVCOP8N0NT" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Data Analysis with R Programming</h3>
         </div>
 
@@ -190,31 +190,31 @@
 
         <div class="cert-card">
             <img src="Delloite.jpg" alt="Forage Certificate ">
-            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.theforage.com/completion-certificates/9PBTqmSxAf6zZTseP/udmxiyHeqYQLkTPvf_9PBTqmSxAf6zZTseP_HsCRvTnuiQAB29i23_1755537160846_completion_certificate.pdf" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Delloite-Technology Job Simulation</h3>
         </div>
 
         <div class="cert-card">
             <img src="GA.jpg" alt="Coursera Certificate ">
-            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.coursera.org/account/accomplishments/verify/QEX2BNT2JNQF" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Getting Started in Google Analytics</h3>
         </div>
 
         <div class="cert-card">
             <img src="MS.jpg" alt="Coursera Certificate ">
-            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.coursera.org/account/accomplishments/verify/UE62FN936ZXD" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Introduction to Data Analysis using Microsoft Excel</h3>
         </div>
 
         <div class="cert-card">
             <img src="python.jpg" alt="Great Learning Certificate ">
-            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.mygreatlearning.com/certificate/ZGQFFRXV?referrer_code=GLYQ2LIA7NQMS" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Python For Machine Learning</h3>
         </div>
 
         <div class="cert-card">
             <img src="PowerBI.jpg" alt="Great Learning Certificate ">
-            <a href="YOUR_CREDENTIAL_LINK" target="_blank" class="cred-btn">Show Credential</a>
+            <a href="https://www.mygreatlearning.com/certificate/WFHCAGDW?referrer_code=GLYQ2LIA7NQMS" target="_blank" class="cred-btn">Show Credential</a>
             <h3>Data Visualization with PowerBI</h3>
         </div>
 
@@ -258,6 +258,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
