--- a/index.html
+++ b/index.html
@@ -152,6 +152,38 @@
         </div>
     </section>
 
+    <!-- Internship Section -->
+<section id="internships" class="internships fade-in">
+    <h2>Internships</h2>
+
+    <div class="intern-grid">
+
+        <!-- Prodigy Infotech Internship -->
+        <div class="intern-card fade-in">
+            <img src="prodigy_logo.png" alt="Prodigy Infotech Logo" class="intern-logo">
+
+            <h3>Web Development Intern</h3>
+
+            <p><strong>Company:</strong> Prodigy Infotech</p>
+            <p><strong>Duration:</strong> 1st December – 31st December</p>
+
+            <p class="intern-desc">
+                Completed hands-on web development tasks including responsive webpage design, 
+                UI enhancements, DOM manipulation, optimization, and building real-world modules 
+                as part of the internship. Developed practical experience in HTML, CSS, JavaScript, 
+                and modern frontend techniques.
+            </p>
+
+            <div class="intern-buttons">
+                <a href="prodigy_offer.pdf" target="_blank" class="intern-btn">Offer Letter</a>
+                <a href="prodigy_completion.pdf" target="_blank" class="intern-btn">Completion Certificate</a>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
     <!-- Certifications Section -->
     <section id="certifications" class="certifications">
     <h2>Certifications</h2>
@@ -258,6 +290,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
