--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <!-- Prodigy Infotech Internship -->
         <div class="intern-card fade-in">
-            <img src="prodigy_logo.png" alt="Prodigy Infotech Logo" class="intern-logo">
+            <img src="logo.jpg" alt="Prodigy Infotech Logo" class="intern-logo">
 
             <h3>Web Development Intern</h3>
 
@@ -175,8 +175,8 @@
             </p>
 
             <div class="intern-buttons">
-                <a href="prodigy_offer.pdf" target="_blank" class="intern-btn">Offer Letter</a>
-                <a href="prodigy_completion.pdf" target="_blank" class="intern-btn">Completion Certificate</a>
+                <a href="Offer Letter.pdf" target="_blank" class="intern-btn">Offer Letter</a>
+                <!--<a href="prodigy_completion.pdf" target="_blank" class="intern-btn">Completion Certificate</a>-->
             </div>
         </div>
 
@@ -290,6 +290,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
