--- a/index.html
+++ b/index.html
@@ -284,12 +284,13 @@
 
 
     <footer>
-        <p>© 2025 Kavya Arekar | Portfolio</p>
+        <center><p>© 2025 Kavya Arekar | Portfolio</p></center>
     </footer>
 
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
