--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#internship">Internship</a></li>
+                <li><a href="#internships">Internship</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="https://www.linkedin.com/in/kavya-arekar-82aa6529b/" target="_blank" class="linkedin-btn"> Visit my LinkedIn</a>
@@ -291,6 +291,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
